# src/servers/grpc/proto/person/person_pb.js
@@ -17,6 +17,7 @@ goog.exportSymbol('proto.person.CreateOneResponse', null, global);
 goog.exportSymbol('proto.person.CreateOneResponse.CreateOneResponseData', null, global);
 goog.exportSymbol('proto.person.DeleteOneRequest', null, global);
 goog.exportSymbol('proto.person.DeleteOneResponse', null, global);
+goog.exportSymbol('proto.person.DeleteOneResponse.DeleteOneResponseData', null, global);
 goog.exportSymbol('proto.person.GetAllRequest', null, global);
 goog.exportSymbol('proto.person.GetAllResponse', null, global);
 goog.exportSymbol('proto.person.GetAllResponse.GetAllResponseData', null, global);
@@ -1560,7 +1561,8 @@ proto.person.DeleteOneResponse.prototype.toObject = function(opt_includeInstance
  */
 proto.person.DeleteOneResponse.toObject = function(includeInstance, msg) {
   var f, obj = {
-
+    data: (f = msg.getData()) && proto.person.DeleteOneResponse.DeleteOneResponseData.toObject(includeInstance, f),
+    timestamp: jspb.Message.getFieldWithDefault(msg, 2, "")
   };
 
   if (includeInstance) {
@@ -1597,6 +1599,15 @@ proto.person.DeleteOneResponse.deserializeBinaryFromReader = function(msg, reade
     }
     var field = reader.getFieldNumber();
     switch (field) {
+    case 1:
+      var value = new proto.person.DeleteOneResponse.DeleteOneResponseData;
+      reader.readMessage(value,proto.person.DeleteOneResponse.DeleteOneResponseData.deserializeBinaryFromReader);
+      msg.setData(value);
+      break;
+    case 2:
+      var value = /** @type {string} */ (reader.readString());
+      msg.setTimestamp(value);
+      break;
     default:
       reader.skipField();
       break;
@@ -1626,6 +1637,208 @@ proto.person.DeleteOneResponse.prototype.serializeBinary = function() {
  */
 proto.person.DeleteOneResponse.serializeBinaryToWriter = function(message, writer) {
   var f = undefined;
+  f = message.getData();
+  if (f != null) {
+    writer.writeMessage(
+      1,
+      f,
+      proto.person.DeleteOneResponse.DeleteOneResponseData.serializeBinaryToWriter
+    );
+  }
+  f = message.getTimestamp();
+  if (f.length > 0) {
+    writer.writeString(
+      2,
+      f
+    );
+  }
+};
+
+
+
+/**
+ * Generated by JsPbCodeGenerator.
+ * @param {Array=} opt_data Optional initial data array, typically from a
+ * server response, or constructed directly in Javascript. The array is used
+ * in place and becomes part of the constructed object. It is not cloned.
+ * If no data is provided, the constructed object will be empty, but still
+ * valid.
+ * @extends {jspb.Message}
+ * @constructor
+ */
+proto.person.DeleteOneResponse.DeleteOneResponseData = function(opt_data) {
+  jspb.Message.initialize(this, opt_data, 0, -1, null, null);
+};
+goog.inherits(proto.person.DeleteOneResponse.DeleteOneResponseData, jspb.Message);
+if (goog.DEBUG && !COMPILED) {
+  proto.person.DeleteOneResponse.DeleteOneResponseData.displayName = 'proto.person.DeleteOneResponse.DeleteOneResponseData';
+}
+
+
+if (jspb.Message.GENERATE_TO_OBJECT) {
+/**
+ * Creates an object representation of this proto suitable for use in Soy templates.
+ * Field names that are reserved in JavaScript and will be renamed to pb_name.
+ * To access a reserved field use, foo.pb_<name>, eg, foo.pb_default.
+ * For the list of reserved names please see:
+ *     com.google.apps.jspb.JsClassTemplate.JS_RESERVED_WORDS.
+ * @param {boolean=} opt_includeInstance Whether to include the JSPB instance
+ *     for transitional soy proto support: http://goto/soy-param-migration
+ * @return {!Object}
+ */
+proto.person.DeleteOneResponse.DeleteOneResponseData.prototype.toObject = function(opt_includeInstance) {
+  return proto.person.DeleteOneResponse.DeleteOneResponseData.toObject(opt_includeInstance, this);
+};
+
+
+/**
+ * Static version of the {@see toObject} method.
+ * @param {boolean|undefined} includeInstance Whether to include the JSPB
+ *     instance for transitional soy proto support:
+ *     http://goto/soy-param-migration
+ * @param {!proto.person.DeleteOneResponse.DeleteOneResponseData} msg The msg instance to transform.
+ * @return {!Object}
+ * @suppress {unusedLocalVariables} f is only used for nested messages
+ */
+proto.person.DeleteOneResponse.DeleteOneResponseData.toObject = function(includeInstance, msg) {
+  var f, obj = {
+    status: jspb.Message.getFieldWithDefault(msg, 1, "")
+  };
+
+  if (includeInstance) {
+    obj.$jspbMessageInstance = msg;
+  }
+  return obj;
+};
+}
+
+
+/**
+ * Deserializes binary data (in protobuf wire format).
+ * @param {jspb.ByteSource} bytes The bytes to deserialize.
+ * @return {!proto.person.DeleteOneResponse.DeleteOneResponseData}
+ */
+proto.person.DeleteOneResponse.DeleteOneResponseData.deserializeBinary = function(bytes) {
+  var reader = new jspb.BinaryReader(bytes);
+  var msg = new proto.person.DeleteOneResponse.DeleteOneResponseData;
+  return proto.person.DeleteOneResponse.DeleteOneResponseData.deserializeBinaryFromReader(msg, reader);
+};
+
+
+/**
+ * Deserializes binary data (in protobuf wire format) from the
+ * given reader into the given message object.
+ * @param {!proto.person.DeleteOneResponse.DeleteOneResponseData} msg The message object to deserialize into.
+ * @param {!jspb.BinaryReader} reader The BinaryReader to use.
+ * @return {!proto.person.DeleteOneResponse.DeleteOneResponseData}
+ */
+proto.person.DeleteOneResponse.DeleteOneResponseData.deserializeBinaryFromReader = function(msg, reader) {
+  while (reader.nextField()) {
+    if (reader.isEndGroup()) {
+      break;
+    }
+    var field = reader.getFieldNumber();
+    switch (field) {
+    case 1:
+      var value = /** @type {string} */ (reader.readString());
+      msg.setStatus(value);
+      break;
+    default:
+      reader.skipField();
+      break;
+    }
+  }
+  return msg;
+};
+
+
+/**
+ * Serializes the message to binary data (in protobuf wire format).
+ * @return {!Uint8Array}
+ */
+proto.person.DeleteOneResponse.DeleteOneResponseData.prototype.serializeBinary = function() {
+  var writer = new jspb.BinaryWriter();
+  proto.person.DeleteOneResponse.DeleteOneResponseData.serializeBinaryToWriter(this, writer);
+  return writer.getResultBuffer();
+};
+
+
+/**
+ * Serializes the given message to binary data (in protobuf wire
+ * format), writing to the given BinaryWriter.
+ * @param {!proto.person.DeleteOneResponse.DeleteOneResponseData} message
+ * @param {!jspb.BinaryWriter} writer
+ * @suppress {unusedLocalVariables} f is only used for nested messages
+ */
+proto.person.DeleteOneResponse.DeleteOneResponseData.serializeBinaryToWriter = function(message, writer) {
+  var f = undefined;
+  f = message.getStatus();
+  if (f.length > 0) {
+    writer.writeString(
+      1,
+      f
+    );
+  }
+};
+
+
+/**
+ * optional string status = 1;
+ * @return {string}
+ */
+proto.person.DeleteOneResponse.DeleteOneResponseData.prototype.getStatus = function() {
+  return /** @type {string} */ (jspb.Message.getFieldWithDefault(this, 1, ""));
+};
+
+
+/** @param {string} value */
+proto.person.DeleteOneResponse.DeleteOneResponseData.prototype.setStatus = function(value) {
+  jspb.Message.setProto3StringField(this, 1, value);
+};
+
+
+/**
+ * optional DeleteOneResponseData data = 1;
+ * @return {?proto.person.DeleteOneResponse.DeleteOneResponseData}
+ */
+proto.person.DeleteOneResponse.prototype.getData = function() {
+  return /** @type{?proto.person.DeleteOneResponse.DeleteOneResponseData} */ (
+    jspb.Message.getWrapperField(this, proto.person.DeleteOneResponse.DeleteOneResponseData, 1));
+};
+
+
+/** @param {?proto.person.DeleteOneResponse.DeleteOneResponseData|undefined} value */
+proto.person.DeleteOneResponse.prototype.setData = function(value) {
+  jspb.Message.setWrapperField(this, 1, value);
+};
+
+
+proto.person.DeleteOneResponse.prototype.clearData = function() {
+  this.setData(undefined);
+};
+
+
+/**
+ * Returns whether this field is set.
+ * @return {boolean}
+ */
+proto.person.DeleteOneResponse.prototype.hasData = function() {
+  return jspb.Message.getField(this, 1) != null;
+};
+
+
+/**
+ * optional string timestamp = 2;
+ * @return {string}
+ */
+proto.person.DeleteOneResponse.prototype.getTimestamp = function() {
+  return /** @type {string} */ (jspb.Message.getFieldWithDefault(this, 2, ""));
+};
+
+
+/** @param {string} value */
+proto.person.DeleteOneResponse.prototype.setTimestamp = function(value) {
+  jspb.Message.setProto3StringField(this, 2, value);
 };
 
 
