# src/servers/http/api/models/schema.ts
@@ -1,0 +1,42 @@
+/**
+ * This file was auto-generated by swagger-to-ts.
+ * Do not make direct changes to the file.
+ */
+
+export namespace API {
+  export interface PersonDeleteOneResponse {
+    timestamp: string;
+    data: PersonDeleteOneResponseData;
+  }
+  export interface PersonDeleteOneResponseData {
+    status: string;
+  }
+  export interface PersonCreateOneResponse {
+    timestamp: string;
+    data: PersonCreateOneResponseData;
+  }
+  export interface PersonCreateOneResponseData {
+    id: string;
+    firstName: string;
+    lastName: string;
+    birthday: string;
+  }
+  export interface PersonCreateOneRequest {
+    data: PersonCreateOneRequestData;
+  }
+  export interface PersonCreateOneRequestData {
+    firstName: string;
+    lastName: string;
+    birthday: string;
+  }
+  export interface GetAllPersonsResponse {
+    timestamp: string;
+    data: GetAllPersonsResponseData[];
+  }
+  export interface GetAllPersonsResponseData {
+    id: string;
+    firstName: string;
+    lastName: string;
+    birthday: string;
+  }
+}
